--- a/.github/workflows/linux_make.yml
+++ b/.github/workflows/linux_make.yml
@@ -1,10 +1,8 @@
 name: Linux make
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
